--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,50 @@ Roxo: #461C89
 Rosa: #D57ACE
 Ciano: #1C8988 
 */
+
+*{
+    margin: 0px;
+    padding: 0px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    box-sizing: border-box;
+}
+
+body, html{
+    background-color: #461C89;
+    height: 100vh;
+    width: 100vw;
+}
+
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login{
+    background-color: aliceblue;
+    position: absolute;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.450);
+
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+div#imagem{
+    display: block;
+    background: #461C89 url(../imagens/pexels-david-bartus-43782-963278.jpg) center/cover no-repeat;
+    height: 200px;
+    
+}
+
+div#formulario{
+    display: block;
+    padding: 10px;
+
+}
+
