--- a/css/media-query.css
+++ b/css/media-query.css
@@ -33,6 +33,10 @@ Ciano: #1C8988
         float: right;
         width: 70%;
     }
+
+    div#formulario>p{
+        font-size: 1.2em;
+    }
 }
 
 @media screen and (min-width: 992px){
@@ -46,14 +50,21 @@ Ciano: #1C8988
     }
 
     div#imagem{
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     div#formulario{
-        float:right;
+        float:left;
         width: 50%;
     }
+
+    div#formulario>h1{
+        font-size: 2em;
+    }
     
+    div#formulario>p{
+        font-size: 1.2em;
+    }
 }
