--- a/css/style.css
+++ b/css/style.css
@@ -56,3 +56,11 @@ div#formulario{
 
 }
 
+div#formulario>h1{
+    text-align: center;
+    margin-bottom: 20x;
+}
+
+div#formulario>p{
+    font-size: 0.8em;
+}
