--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ main{
 section#login{
     background-color: aliceblue;
     position: absolute;
-    width: 250px;
+    width: 260px;
     height: 500px;
     border-radius: 20px;
     overflow: hidden;
@@ -63,4 +63,59 @@ div#formulario>h1{
 
 div#formulario>p{
     font-size: 0.8em;
+}
+
+form>div.campo{
+    background-color: #67288b;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+
+}
+
+div.campo > label {
+    display: none;
+}
+
+form>input[type=submit]{
+    display: block;
+    width: 100%;
+    height: 40px;
+    padding: 5px;
+    font-size: 1em;
+    color: white;
+    font-weight: bold;
+    background-color: #1C8988;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form>input[type=submit]:hover{
+    background-color: #156160;
+}
+
+form > a.botao{
+    display: block;
+    width: 100%;
+    color: #125857;
+    font-weight: bold;
+    background-color: white;
+    border: 1px solid #1C8988;
+    height: 40px;
+    border-radius: 5px;
+    text-decoration: none;
+    text-align: center;
+    margin-top: 5px;
+    font-size: 1em;
+    padding-top: 7px;
+}
+
+form> a.botao:hover{
+    background-color: #2cdad7;
+}
+
+a.botao>span{
+    font-size: 0.9em;
+    
 }
