--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,6 @@ section#login{
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-
     transition: width 0.3s, height 0.3s;
     transition-timing-function: ease;
 }
@@ -66,11 +65,37 @@ div#formulario>p{
 }
 
 form>div.campo{
-    background-color: #67288b;
+    background-color: #3a1772;
+    border: 2px solid #3a1772;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
+    width: 100%;
+    display: block;
 
+}
+
+div.campo > span{
+    color: white;
+    /*background-color: black;*/
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo> input{
+    background-color: #6bdbd9;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-12px);
+}
+
+div.campo> input:focus-within{
+    background-color: white;
 }
 
 div.campo > label {
